# openapi-doc/src/main/spec/one-stop-openapi.yaml
@@ -955,6 +955,47 @@ paths:
         500:
           description: Internal server error
 
+  /rails/categories/statistics:
+    get:
+      tags: [ "categories" ]
+      summary: Get category statistics
+      description: Get the category statistics for the authenticated user, across all their accounts.
+      operationId: getCategoryStatistics
+      security:
+        - cookieAuth: [ ]
+      parameters:
+        - name: "from-date"
+          in: "query"
+          description: The date, inclusive, from which the transaction should start.
+          required: false
+          schema:
+            type: string
+            format: date
+        - name: "to-date"
+          in: "query"
+          description: The date, inclusive, to which the transaction should end.
+          required: false
+          schema:
+            type: string
+            format: date
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/CategoryStatisticsResponse'
+        400:
+          description: Invalid ID supplied
+        401:
+          description: Unauthorized
+        404:
+          description: Category or account not found
+        500:
+          description: Internal server error
+
   /notifications:
     get:
       tags: [ "notifications" ]
@@ -1756,6 +1797,34 @@ components:
           description: |
             Any occurrence of the value within the creditor name will match. The comparison is case-sensitive.
           example: John Doe
+
+    CategoryStatisticsResponse:
+      description: A summary of the transactions in a category.
+      type: object
+      required:
+        - category
+        - total
+        - count
+      properties:
+        category:
+          type: string
+          description: The category's name
+          example: Groceries
+        categoryId:
+          type: string
+          format: uuid
+          description: The category Id. This will be null for uncategorised transactions.
+          example: 07061d76-74f3-4163-aa07-fb6909681f81
+        total:
+          type: number
+          format: double
+          description: The total amount of transactions in the category
+          example: 123.45
+        count:
+          type: integer
+          format: int64
+          description: The number of transactions in the category
+          example: 5
 
     PageLinks:
       type: object
